# space-shooter

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  Makefile  README.md  check.sh  config  highscore.txt  loc.sh  scratch.cpp  waves
src/: allegro.cpp  allegro.h  config.h  debug.h  game_model.h  game_state.cpp  main.cpp  state.h  tags  test_state.cpp
src/cmp/: comm.cpp  comm.h  components.cpp  components.h  entity_factory.cpp  entity_factory.h  nodes.h  systems.cpp  systems.h
src/collision/: circle.cpp  circle.h  collision_space.cpp  collision_space.h  collisions.cpp  collisions.h  shape.h
src/components/: cmp_collidable.cpp  cmp_collidable.h  cmp_die_end_anim.cpp  cmp_die_end_anim.h  cmp_drop_when_die.cpp  cmp_drop_when_die.h  cmp_explode_when_die.cpp  cmp_explode_when_die.h  cmp_score_when_die.cpp  cmp_score_when_die.h  cmp_shoot_player.cpp  cmp_shoot_player.h  cmp_time_to_live.cpp  cmp_time_to_live.h  component.h
src/components/appearance/: cmp_appr_bitmap.cpp  cmp_appr_bitmap.h  cmp_appr_pixel.cpp  cmp_appr_pixel.h  cmp_appr_simple_anim.cpp  cmp_appr_simple_anim.h  frame_def.h
src/components/bounds/: cmp_bounded_life.cpp  cmp_bounded_life.h  cmp_bounded_movement.cpp  cmp_bounded_movement.h
src/components/emitters/: cmp_bullet_emitter.cpp  cmp_bullet_emitter.h
src/components/position/: cmp_move_const_speed.cpp  cmp_move_const_speed.h  cmp_move_path.cpp  cmp_move_path.h  cmp_move_player.cpp  cmp_move_player.h  cmp_orientation.cpp  cmp_orientation.h  cmp_rotate_const_speed.cpp  cmp_rotate_const_speed.h
src/components/wellness/: .cmp_health_picker.cpp.swp  .cmp_painmap.cpp.swp  cmp_health_etc.cpp  cmp_health_etc.h  cmp_health_picker.cpp  cmp_health_picker.h  cmp_painmap.cpp  cmp_painmap.h  cmp_player_health.cpp  cmp_player_health.h  cmp_smoke_when_hurt.cpp  cmp_smoke_when_hurt.h
src/efwk/: cmp_appearance.cpp  cmp_appearance.h  cmp_col_profile.cpp  cmp_col_profile.h  cmp_dynamics.cpp  cmp_dynamics.h  cmp_fx.cpp  cmp_fx.h  cmp_misc.cpp  cmp_misc.h  cmp_reaction.cpp  cmp_reaction.h  cmp_shape.cpp  cmp_shape.h  cmp_timer.cpp  cmp_timer.h  cmp_weapon_beh.cpp  cmp_weapon_beh.h  comm.cpp  comm.h  components.cpp  components.h  entity_factory.cpp  entity_factory.h  game_ent_fac.cpp  game_ent_fac.h  menu_ent_fac.h  nodes.h  sys_arms.cpp  sys_arms.h  sys_base.h  sys_collision.cpp  sys_collision.h  sys_drawing.cpp  sys_drawing.h  sys_fx.cpp  sys_fx.h  sys_hud.cpp  sys_hud.h  sys_input.cpp  (+15 more)
src/efwk/cmp/: appr.cpp  appr.h  bounds.cpp  bounds.h  col_profile.cpp  col_profile.h  col_report.h  coll_queue.cpp  coll_queue.h  components.h  cooldown.h  dynamics.cpp  dynamics.h  fx.cpp  fx.h  misc.cpp  misc.h  noise_queue.h  orientation.cpp  orientation.h  pickup_profile.cpp  pickup_profile.h  reaction.cpp  reaction.h  shape.cpp  shape.h  timer.cpp  timer.h  upgrade_atom.h  upgrades.cpp  upgrades.h  weapon.h  weapon_beh.cpp  weapon_beh.h  wellness.cpp  wellness.h
src/efwk/sys/: arms.cpp  arms.h  base.h  collision.cpp  collision.h  drawing.cpp  drawing.h  fx.cpp  fx.h  hud.cpp  hud.h  input.cpp  input.h  nodes.h  (+13 more)
src/efwk2/: comm.h  sfinae.h
src/entities/: entity.cpp  entity.h  entity_builder.cpp  entity_builder.h  entity_factory.cpp  entity_factory.h
src/gameplay/: enemy_manager.h  pattern.h  wave.cpp  wave.h
src/gameplay2/: construct.h  ent_anim_sprite.h  ent_bullet.h  ent_enemy.h  ent_pickup.h  ent_player.h  ent_projectile.h  ent_spark.h  game.cpp  game.h  logic.h
src/geometry/: bezier.cpp  bezier.h  misc.h  types.h
src/misc/: config.cpp  config.h  delq.h  exceptions.h  high_score.cpp  high_score.h  logger.cpp  logger.h  lparse.h  maybe.h  rand.cpp  rand.h  random_clock.h
src/resources/: resman.cpp  resman.h
src/script/: dom.cpp  dom.h  expect.cpp  expect.h  parsing.h  scriptman.h  tok.h
src/states/: coll_test_state.cpp  game_state.cpp  hs_display_state.cpp  hs_enter_state.cpp  menu_state.cpp  new_engine_state.cpp  state.h  test_state.cpp
tplcmp/: main.cpp
(+88 files in other folders)
